--- a/app/views/answers/_form.html.slim
+++ b/app/views/answers/_form.html.slim
@@ -1,6 +1,6 @@
 .col-lg-4
   h1 New answer
-  = form_for [question, answer] do |f|
+  = form_for [question, answer], remote: true do |f|
     .form-group
       = f.label :body, 'Answer'
       = f.text_area :body, class: 'form-control', rows: 5
