--- a/app/views/questions/show.html.slim
+++ b/app/views/questions/show.html.slim
@@ -4,7 +4,7 @@
     p = @question.body
     p = link_to 'Destroy', @question, method: :delete if user_authorized_for(@question)
 hr
-.row
+.row#answers
   = render @question.answers
 hr
 .row
