Пользователь может редактировать свой ​​ответ с помощью AJAX

--- a/app/views/answers/_answer.html.slim
+++ b/app/views/answers/_answer.html.slim
@@ -1,3 +1,8 @@
 p = answer.user.try(:email)
 p = answer.body
-p = link_to 'Destroy', question_answer_path(answer.question, answer), method: :delete if user_authorized_for(answer)
+- if user_authorized_for(answer)
+  p = link_to 'Edit', '', class: 'edit-answer-link', data: { answer_id: answer.id }
+  = form_for [@question, answer], remote: true, html: { id: "edit-answer-#{answer.id}"} do |f|
+    = f.text_area :body
+    = f.submit 'Save'
+  p = link_to 'Destroy', question_answer_path(answer.question, answer), method: :delete
