--- a/app/views/answers/update.js.erb
+++ b/app/views/answers/update.js.erb
@@ -4,10 +4,10 @@
     <% end %>
 <% else %>
     $('#answers').html('<%= j render @question.answers %>');
-    $('.edit-answer-link').click(function(e) {
+    $('.answer__edit-link').click(function(e) {
         e.preventDefault();
         $(this).hide();
         answer_id = $(this).data('answerId');
-        $('form#edit-answer-' + answer_id).show();
+        $('form#edit-answer_' + answer_id).show();
     });
 <% end %>
