Пользователь может редактировать и удалить свои вопросы

--- a/app/views/questions/_form.html.slim
+++ b/app/views/questions/_form.html.slim
@@ -1,5 +1,6 @@
 .col-lg-4
-  = form_for question do |f|
+  = form_for question, remote: remote do |f|
+    .question-errors
     .form-group
       = f.label :title
       = f.text_field :title, class: 'form-control'
