--- a/app/views/questions/_question.html.slim
+++ b/app/views/questions/_question.html.slim
@@ -1,3 +1,6 @@
-.row
+.row id="#{dom_id(question)}"
   .col-md-12
     h3 = link_to question.title, question
+    - if user_authorized_for question
+      p = link_to 'Edit', edit_question_path(question), class: 'question__edit-link', remote: true
+      p = link_to 'Destroy', question, method: :delete, remote: true
