--- a/app/views/answers/_answer.html.slim
+++ b/app/views/answers/_answer.html.slim
@@ -6,8 +6,9 @@
   - if user_signed_in? && current_user.id == answer.question.user_id && !answer.best
     p = link_to 'Best answer', make_best_answer_path(answer), method: :patch, remote: true
   - if user_authorized_for(answer)
-    p = link_to 'Edit', '#', class: 'answer__edit-link', data: { answer_id: answer.id }
-    = form_for answer, remote: true, html: {class: 'answer__edit-form', id: "edit-#{dom_id(answer)}"} do |f|
-      = f.text_area :body
+    p = link_to 'Edit', '#', class: 'answer_edit-link', data: { answer_id: answer.id }
+    = form_for answer, remote: true, html: {class: 'answer_edit-form', id: "edit-#{dom_id(answer)}"} do |f|
+      .edit-errors
+        = f.text_area :body
       = f.submit 'Save'
     p = link_to 'Destroy', answer_path(answer), method: :delete, remote: true
