--- a/app/views/questions/index.html.slim
+++ b/app/views/questions/index.html.slim
@@ -1,2 +1,3 @@
 h1.text-center Index page
-= render @questions
+- @questions.each do |question|
+  h3 = link_to question.title, question_path(question)
