--- a/app/views/questions/show.html.slim
+++ b/app/views/questions/show.html.slim
@@ -3,7 +3,7 @@
     h2 = @question.title
     p = @question.body
     - if user_authorized_for @question
-      p = link_to 'Edit', edit_question_path(@question), class: 'question__edit-link'
+      p = link_to 'Edit', edit_question_path(@question), class: 'question_edit-link'
       p = link_to 'Destroy', @question, method: :delete
 hr
 .row#answers
