--- a/app/views/answers/_answer.html.slim
+++ b/app/views/answers/_answer.html.slim
@@ -3,6 +3,12 @@
   - if answer.best
     p The Best Answer
   p = answer.body
+  - if answer.attachments.any?
+    p Attachments
+    ul
+      - answer.attachments.each do |a|
+        li = link_to a.file.identifier, a.file.url
+
   - if user_signed_in? && current_user.id == answer.question.user_id && !answer.best
     p = link_to 'Best answer', make_best_answer_path(answer), method: :patch, remote: true
   - if user_authorized_for(answer)
