--- a/app/views/answers/_form.html.slim
+++ b/app/views/answers/_form.html.slim
@@ -5,4 +5,8 @@
     .form-group
       = f.label :body, 'Answer'
       = f.text_area :body, class: 'form-control', rows: 5
+    .form-group
+      = f.fields_for :attachments do |a|
+        = a.label :file
+        = a.file_field :file
     = f.submit 'Create', class: 'btn btn-default'
