--- a/app/views/questions/show.html.slim
+++ b/app/views/questions/show.html.slim
@@ -2,6 +2,11 @@
   .col-md-6.question__wrapper id="#{dom_id(@question)}"
     h2 = @question.title
     p = @question.body
+    - if @question.attachments.any?
+      p Attachments
+      ul
+        - @question.attachments.each do |attachment|
+          li = link_to attachment.file.identifier, attachment.file.url
     - if user_authorized_for @question
       p = link_to 'Edit', edit_question_path(@question), class: 'question_edit-link'
       p = link_to 'Destroy', @question, method: :delete
