--- a/app/views/answers/_form.html.slim
+++ b/app/views/answers/_form.html.slim
@@ -1,12 +1,10 @@
 .col-lg-4
   h1 New answer
-  = form_for [question, answer], remote: true do |f|
+  = nested_form_for [question, answer], remote: true do |f|
     .answer-errors
     .form-group
       = f.label :body, 'Answer'
       = f.text_area :body, class: 'form-control', rows: 5
     .form-group
-      = f.fields_for :attachments do |a|
-        = a.label :file
-        = a.file_field :file
+      = render 'shared/attachment_fields', f: f
     = f.submit 'Create', class: 'btn btn-default'
