--- a/app/views/questions/_form.html.slim
+++ b/app/views/questions/_form.html.slim
@@ -1,5 +1,5 @@
 .col-lg-4
-  = form_for question, remote: remote do |f|
+  = nested_form_for question, remote: remote do |f|
     .question-errors
     .form-group
       = f.label :title
@@ -8,7 +8,5 @@
       = f.label :body
       = f.text_area :body, class: 'form-control', rows: 5
     .form-group
-      = f.fields_for :attachments do |a|
-        = a.label :file
-        = a.file_field :file
+      = render 'shared/attachment_fields', f: f
     = f.submit 'Create', class: 'btn btn-default'
