User can delete attachments from answers and questions

--- a/app/views/answers/_answer.html.slim
+++ b/app/views/answers/_answer.html.slim
@@ -13,8 +13,10 @@
     p = link_to 'Best answer', make_best_answer_path(answer), method: :patch, remote: true
   - if user_authorized_for(answer)
     p = link_to 'Edit', '#', class: 'answer_edit-link', data: { answer_id: answer.id }
-    = form_for answer, remote: true, html: {class: 'answer_edit-form', id: "edit-#{dom_id(answer)}"} do |f|
+    = nested_form_for answer, remote: true, html: {class: 'answer_edit-form', id: "edit-#{dom_id(answer)}"} do |f|
       .edit-errors
         = f.text_area :body
       = f.submit 'Save'
+      .form-group
+        = render 'shared/attachment_fields', f: f
     p = link_to 'Destroy', answer_path(answer), method: :delete, remote: true
