--- a/app/views/questions/show.html.slim
+++ b/app/views/questions/show.html.slim
@@ -5,8 +5,8 @@
     - if @question.attachments.any?
       p Attachments
       ul
-        - @question.attachments.each do |attachment|
-          li = link_to attachment.file.identifier, attachment.file.url
+        - @question.attachments.each do |a|
+          li = link_to a.file.identifier, a.file.url
     - if user_authorized_for @question
       p = link_to 'Edit', edit_question_path(@question), class: 'question_edit-link'
       p = link_to 'Destroy', @question, method: :delete
