--- a/app/views/answers/_form.html.slim
+++ b/app/views/answers/_form.html.slim
@@ -5,6 +5,6 @@
     .form-group
       = f.label :body, 'Answer'
       = f.text_area :body, class: 'form-control', rows: 5
-    .form-group
+    .form-group#attachments
       = render 'shared/attachment_fields', f: f
     = f.submit 'Create', class: 'btn btn-default'
