--- a/app/views/questions/show.html.slim
+++ b/app/views/questions/show.html.slim
@@ -7,6 +7,8 @@
       ul
         - @question.attachments.each do |a|
           li = link_to a.file.identifier, a.file.url
+    .question_votes
+      = render 'shared/votes_bar', object: @question
     - if user_authorized_for @question
       p = link_to 'Edit', edit_question_path(@question), class: 'question_edit-link'
       p = link_to 'Destroy', @question, method: :delete
