Немного поправил дизайн

--- a/app/assets/stylesheets/answers.scss
+++ b/app/assets/stylesheets/answers.scss
@@ -1,3 +1,10 @@
 .answer_edit-form{
   display: none;
 }
+.answers_title{
+  padding: 10px 0;
+  margin-bottom: 20px;
+}
+.answer_wrapper{
+  margin-bottom: 15px;
+}
