--- a/app/views/answers/_answer.html.slim
+++ b/app/views/answers/_answer.html.slim
@@ -1,24 +1,25 @@
-.col-md-12.answer_wrapper id=dom_id(answer)
-  p = answer.user.try(:email)
+.col-md-12.answer_wrapper.border-bottom-grey id=dom_id(answer) class="#{'answer_best' if answer.best}"
+  p = link_to answer.user.try(:email), '#!'
   - if answer.best
-    p The Best Answer
+    p
+      span.best_answer
+        ' best answer
   p.answer_body = answer.body
   - if answer.attachments.any?
     p Attachments
     ul
-      - answer.attachments.each do |a|
-        li = link_to a.file.identifier, a.file.url
-
+      - answer.attachments.each do |attachment|
+        li = link_to attachment.file.identifier, attachment.file.url
   .answer_votes
     = render 'shared/votes_bar', object: answer
   - if user_signed_in? && current_user.id == answer.question.user_id && !answer.best
     p = link_to 'Best answer', make_best_answer_path(answer), method: :patch, remote: true
   - if user_authorized_for(answer)
-    p = link_to 'Edit', '#', class: 'answer_edit-link', data: { answer_id: answer.id }
-    = nested_form_for answer, remote: true, html: {class: 'answer_edit-form', id: "edit-#{dom_id(answer)}"} do |f|
-      .edit-errors
-        = f.text_area :body
+    p
+      => link_to 'Edit', '#', class: 'answer_edit-link', data: { answer_id: answer.id }
+      = link_to 'Destroy', answer_path(answer), method: :delete, remote: true
+    = nested_form_for answer, remote: true, html: { class: 'answer_edit-form', id: "edit-#{dom_id(answer)}" } do |f|
+      = f.text_area :body
       = f.submit 'Save'
       .form-group
         = render 'shared/attachment_fields', f: f
-    p = link_to 'Destroy', answer_path(answer), method: :delete, remote: true
