--- a/app/views/answers/destroy.js.erb
+++ b/app/views/answers/destroy.js.erb
@@ -1,1 +1,4 @@
 $('#<%= dom_id(@answer) %>').remove();
+<% unless @answer.question.answers.any? %>
+    $('#answers').addClass('hidden');
+<% end %>
