--- a/app/views/questions/index.html.slim
+++ b/app/views/questions/index.html.slim
@@ -1,3 +1,3 @@
-h1.text-center Index page
-- @questions.each do |question|
-  h3 = link_to question.title, question_path(question)
+.row
+  h3.text-left.questions-index_title Latest questions
+= render @questions
