--- a/app/views/answers/_answer.html.slim
+++ b/app/views/answers/_answer.html.slim
@@ -23,3 +23,7 @@
       = f.submit 'Save'
       .form-group
         = render 'shared/attachment_fields', f: f
+  ul.answer_comments.list-unstyled
+    = render answer.comments
+    - if user_signed_in?
+      = render 'comments/form', comment: answer.comments.new, commentable: answer
