--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -6,7 +6,7 @@
   <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
   <%= csrf_meta_tags %>
 </head>
-<body>
+<body data-current-user-id="<%= current_user.id if user_signed_in? %>">
 <%= render 'layouts/header' %>
 <div class="section">
   <div class="container">
