--- a/app/views/questions/show.html.slim
+++ b/app/views/questions/show.html.slim
@@ -16,6 +16,10 @@
       p
         => link_to 'Edit', edit_question_path(@question), class: 'question_edit-link'
         = link_to 'Destroy', @question, method: :delete
+    ul.question_comments.list-unstyled
+      = render @question.comments
+    - if user_signed_in?
+      = render 'comments/form', comment: @question.comments.new, commentable: @question
 .row#answers class="#{'hidden' unless @question.answers.any?}" data-question-id=@question.id
   .col-md-12
     h3.border-bottom-grey.answers_title Answers
@@ -25,3 +29,4 @@
   = render 'answers/form', question: @question, answer: @answer if user_signed_in?
 
 = subscribe_to "/questions/#{@question.id}/answers"
+= subscribe_to "/questions/#{@question.id}/comments"
