--- a/app/views/questions/show.html.slim
+++ b/app/views/questions/show.html.slim
@@ -12,7 +12,7 @@
             li = link_to attachment.file.identifier, attachment.file.url
     .question_votes
       = render 'shared/votes_bar', object: @question
-    - if user_authorized_for @question
+    - if policy(@question).update? && policy(@question).destroy?
       p
         => link_to 'Edit', edit_question_path(@question), class: 'question_edit-link'
         = link_to 'Destroy', @question, method: :delete
