--- a/app/views/questions/index.html.slim
+++ b/app/views/questions/index.html.slim
@@ -1,5 +1,5 @@
 .row
-  h3.text-left.questions-index__title Latest questions
+  h3.text-left.questions-index_title Latest questions
 #questions
   = render @questions
 
