--- a/app/views/questions/index.html.slim
+++ b/app/views/questions/index.html.slim
@@ -1,4 +1,6 @@
 .row
+  = render partial: 'search/form'
+.row
   h3.text-left.questions-index_title Latest questions
 #questions
   = render @questions
