--- a/app/views/questions/show.html.slim
+++ b/app/views/questions/show.html.slim
@@ -1,40 +1,45 @@
-.row
-  .col-md-8.question_wrapper id="#{dom_id(@question)}"
-    h3.question_title.question_title-show.border-bottom-grey
-      = @question.title
-    p.question_body
-      = @question.body
-    - if @question.attachments.any?
-      .question_attachments-wrapper
-        p Attachments:
-        ul
-          - @question.attachments.each do |attachment|
-            li = link_to attachment.file.identifier, attachment.file.url
-    .question_votes
-      = render 'shared/votes_bar', object: @question
-    p
+- cache @resource do
+  .row
+    .col-md-8.question_wrapper id="#{dom_id(@question)}"
+      h3.question_title.question_title-show.border-bottom-grey
+        = @question.title
+      p.question_body
+        = @question.body
+      - if @question.attachments.any?
+        .question_attachments-wrapper
+          p Attachments:
+          ul
+            - cache collection_cache_key_for(Attachment) do
+              - @question.attachments.each do |attachment|
+                - cache attachment do
+                  li = link_to attachment.file.identifier, attachment.file.url
+      .question_votes
+        = render 'shared/votes_bar', object: @question
+      p
+        - if user_signed_in?
+          - if @question.subscribed?(current_user)
+            = link_to 'Unsubscribe', unsubscribe_question_path(@question), method: :post
+          - else
+            = link_to 'Subscribe', subscribe_question_path(@question), method: :post
+      - if policy(@question).update?
+        p
+          = link_to 'Edit', edit_question_path(@question), class: 'question_edit-link'
+      - if policy(@question).destroy?
+        p
+          = link_to 'Destroy', @question, method: :delete
+      ul.question_comments.list-unstyled
+        - cache collection_cache_key_for(Comment) do
+          = render @question.comments
       - if user_signed_in?
-        - if @question.subscribed?(current_user)
-          = link_to 'Unsubscribe', unsubscribe_question_path(@question), method: :post
-        - else
-          = link_to 'Subscribe', subscribe_question_path(@question), method: :post
-    - if policy(@question).update?
-      p
-        = link_to 'Edit', edit_question_path(@question), class: 'question_edit-link'
-    - if policy(@question).destroy?
-      p
-        = link_to 'Destroy', @question, method: :delete
-    ul.question_comments.list-unstyled
-      = render @question.comments
-    - if user_signed_in?
-      = render 'comments/form', comment: @question.comments.new, commentable: @question
-.row#answers class="#{'hidden' unless @question.answers.any?}" data-question-id=@question.id
-  .col-md-12
-    h3.border-bottom-grey.answers_title Answers
-  .answers_list
-    = render @question.answers
-.row
-  = render 'answers/form', question: @question, answer: Answer.new if user_signed_in?
+        = render 'comments/form', comment: @question.comments.new, commentable: @question
+  .row#answers class="#{'hidden' unless @question.answers.any?}" data-question-id=@question.id
+    .col-md-12
+      h3.border-bottom-grey.answers_title Answers
+    .answers_list
+      - cache collection_cache_key_for(Answer) do
+        = render @question.answers
+  .row
+    = render 'answers/form', question: @question, answer: Answer.new if user_signed_in?
 
 = subscribe_to "/questions/#{@question.id}/answers"
 = subscribe_to "/questions/#{@question.id}/comments"
