--- a/app/views/questions/index.html.slim
+++ b/app/views/questions/index.html.slim
@@ -3,7 +3,6 @@
 .row
   h3.text-left.questions-index_title Latest questions
 #questions
-  - cache collection_cache_key_for(Question) do
-    = render @questions
+  = render @questions
 
-= subscribe_to "/questions"
+= subscribe_to '/questions'
